--- a/app/src/main/res/layout/color_picker.xml
+++ b/app/src/main/res/layout/color_picker.xml
@@ -20,10 +20,11 @@
             android:id="@+id/colorValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter value in hexadecimal (0xAARRGGBB)"
+            android:hint="Enter value in hexadecimal (#AARRGGBB)"
             />
     </LinearLayout>
     <Button
+        android:id="@+id/btnSetColor"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
@@ -31,7 +32,7 @@
         android:text="Set line color"
         />
     <Button
-        android:id="@+id/btnSetColor"
+        android:id="@+id/btnCancel"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
